prod/component_postgres_stateful.yaml
###########################
# StatefulSet
###########################
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  selector:
    matchLabels:
      component: postgres # has to match .spec.template.metadata.labels
  serviceName: "postgres-cluster-ip-service"
  replicas: 1 # should not be more than 1 for our postgres volume requirement, because between statelfulset replicas, volume is not shared 
  template:
    metadata:
      labels:
        component: postgres # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 0
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-persistent-volume-claim
      containers:
      - name: postgres-container
        image: postgres
        ports:
        - containerPort: 5432
          name: postgres-port
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
---
###########################
# Headless Cluster IP Service
###########################
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  labels:
    component: postgres
spec:
  clusterIP: None
  selector:
    component: postgres
  ports:
    - port: 5432
      name: postgres-port
